--- a/LanguageSchool/Views/Test/Take.cshtml
+++ b/LanguageSchool/Views/Test/Take.cshtml
@@ -9,6 +9,8 @@
 
 @using (Html.BeginForm())
 {
+    int anotherHalf = (Model.ClosedQuestions.Count / 2) + 1;
+
     <div class="container">
         @*@Html.HiddenFor(model => model.CourseId)
         @Html.HiddenFor(model => model.Points)
@@ -17,21 +19,25 @@
 
         <div class="row">
             <div class="bordered col-md-12">
-                <div class="form-group bordered col-md-6">
-                    @for (int i = 0; i <= (Model.ClosedQuestions.Count / 2); i++)
-                    {
-                        ViewBag.i = i;
+                <div class="form-group col-md-6" style="border-right: 1px solid lightgray;">
+                    <ol>
+                        @for (int i = 0; i <= (Model.ClosedQuestions.Count / 2); i++)
+                        {
+                            ViewBag.i = i;
 
-                        @Html.Partial("_PrepareAnswers");
-                    }
+                            @Html.Partial("_PrepareAnswers");
+                        }
+                    </ol>
                 </div>
-                <div class="form-group bordered col-md-6">
-                    @for (int i = (Model.ClosedQuestions.Count / 2) + 1; i < Model.ClosedQuestions.Count; i++)
-                    {
-                        ViewBag.i = i;
+                <div class="form-group col-md-6">
+                    <ol start=@anotherHalf>
+                        @for (int i = anotherHalf; i < Model.ClosedQuestions.Count; i++)
+                        {
+                            ViewBag.i = i;
 
-                        @Html.Partial("_PrepareAnswers");
-                    }
+                            @Html.Partial("_PrepareAnswers");
+                        }
+                    </ol>
                 </div>
             </div>
         <div class="row">
